--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 @import url('footer.css');
+@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300&family=Roboto&display=swap');
 
 body {
   background-color: whitesmoke;
 }
 
 .title {
+  font-family: 'Roboto', sans-serif;
   text-shadow: 0 0 8px rgba(0,0,0,0.2);
 }
 
