--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,6 @@ body {
   filter: drop-shadow(0 0 8px rgba(0,0,0,0.3));
 }
 
-.results {
+.result-title {
   text-shadow: 0 0 8px rgba(0,0,0,0.2);
 }
